--- a/Reflected-Diffusion/configs/train.yaml
+++ b/Reflected-Diffusion/configs/train.yaml
@@ -8,10 +8,10 @@ ngpus: 1
 dataroot: datasets
 
 training:
-  batch_size: 128
-  n_iters: 1300001
-  snapshot_freq: 50000
-  log_freq: 50
+  batch_size: 1024
+  n_iters: 1500
+  snapshot_freq: 500
+  log_freq: 1
   eval_freq: 100
   snapshot_freq_for_preemption: 10000
   snapshot_sampling: True
@@ -20,7 +20,7 @@ training:
   drop_label: 0.2
 
 eval:
-  batch_size: 256
+  batch_size: 1024
 
 sde: 
   name: vesde
@@ -41,7 +41,7 @@ sampling:
 optim:
   weight_decay: 0
   optimizer: Adam
-  lr: 2e-4
+  lr: 0.00006
   beta1: 0.9
   beta2: 0.999
   eps: 1e-8
