--- a/Training Runs/2025.07.14_170258/.hydra/hydra.yaml
+++ b/Training Runs/2025.07.14_170258/.hydra/hydra.yaml
@@ -1,6 +1,6 @@
 hydra:
   run:
-    dir: Training Runs/2025.07.11_214700
+    dir: Training Runs/${now:%Y.%m.%d_%H%M%S}
   sweep:
     dir: Training Runs/${now:%Y.%m.%d_%H%M%S}
     subdir: ${hydra.job.num}
@@ -135,14 +135,14 @@ hydra:
   output_subdir: .hydra
   overrides:
     hydra:
-    - hydra.run.dir=Training Runs/2025.07.11_214700
     - hydra.mode=RUN
     task:
-    - checkpoint_path=Training Runs/2025.07.11_214700/checkpoints/checkpoint_2.pth
+    - data=gto_halo
+    - model=ncsnpp
   job:
     name: run_train
     chdir: null
-    override_dirname: checkpoint_path=Training Runs/2025.07.11_214700/checkpoints/checkpoint_2.pth
+    override_dirname: data=gto_halo,model=ncsnpp
     id: ???
     num: ???
     config_name: train
@@ -174,7 +174,7 @@ hydra:
       schema: structured
       provider: schema
     output_dir: /Users/sriramelango/Documents/Documents [Data]/Princeton Research/Optimized
-      Diffusion Model/Training Runs/2025.07.11_214700
+      Diffusion Model/Training Runs/2025.07.14_170258
     choices:
       data: gto_halo
       model: ncsnpp
