--- a/Training Runs/2025.07.11_214700/.hydra/hydra.yaml
+++ b/Training Runs/2025.07.11_214700/.hydra/hydra.yaml
@@ -156,21 +156,25 @@ hydra:
   runtime:
     version: 1.3.2
     version_base: '1.3'
-    cwd: /home/se7159/optimized-diffusion-model
+    cwd: /Users/sriramelango/Documents/Documents [Data]/Princeton Research/Optimized
+      Diffusion Model
     config_sources:
     - path: hydra.conf
       schema: pkg
       provider: hydra
-    - path: /home/se7159/optimized-diffusion-model/Reflected-Diffusion/configs
+    - path: /Users/sriramelango/Documents/Documents [Data]/Princeton Research/Optimized
+        Diffusion Model/Reflected-Diffusion/configs
       schema: file
       provider: main
-    - path: /home/se7159/optimized-diffusion-model/Reflected-Diffusion/configs
+    - path: /Users/sriramelango/Documents/Documents [Data]/Princeton Research/Optimized
+        Diffusion Model/Reflected-Diffusion/configs
       schema: file
       provider: command-line
     - path: ''
       schema: structured
       provider: schema
-    output_dir: /home/se7159/optimized-diffusion-model/Training Runs/2025.07.11_214700
+    output_dir: /Users/sriramelango/Documents/Documents [Data]/Princeton Research/Optimized
+      Diffusion Model/Training Runs/2025.07.11_214700
     choices:
       data: gto_halo
       model: ncsnpp
