--- a/Reflected-Diffusion/configs/data/gto_halo.yaml
+++ b/Reflected-Diffusion/configs/data/gto_halo.yaml
@@ -1,6 +1,6 @@
-dataset: GTOHaloImage
+dataset: GTOHaloImageContext
 pkl_path: GTO_Halo_DM/data/training_data_boundary_100000.pkl
-num_channels: 1
+num_channels: 3
 image_size: 9
 image_width: 9
 classes: true 
