--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 Miniconda3-latest-Linux-x86_64.sh filter=lfs diff=lfs merge=lfs -text
 Miniconda3-latest-Linux-x86_64.sh
+model-epoch-175.pt filter=lfs diff=lfs merge=lfs -text
