--- a/Reflected-Diffusion/configs/data/gto_halo.yaml
+++ b/Reflected-Diffusion/configs/data/gto_halo.yaml
@@ -1,7 +1,6 @@
-dataset: GTOHaloImage
+dataset: GTOHalo1D
 pkl_path: GTO_Halo_DM/data/training_data_boundary_100000.pkl
 num_channels: 1
-image_size: 9
-image_width: 9
-classes: true 
+seq_length: 67
+classes: true
 ngpus: 1 
