--- a/Reflected-Diffusion/configs/model/ncsnpp.yaml
+++ b/Reflected-Diffusion/configs/model/ncsnpp.yaml
@@ -3,25 +3,25 @@ channels: 1
 image_size: 9
 image_width: 9
 num_classes: 1
-cond_drop_prob: 0.5
+cond_drop_prob: 0.3
 conditional: true
 init_scale: 0.
-ema_rate: 0.999
-nf: 64
-ch_mult: [1, 2, 2]
-num_res_blocks: 2
-attn_resolutions: [9]
+ema_rate: 0.9999
+nf: 512
+ch_mult: [1, 2, 4]
+num_res_blocks: 4
+attn_resolutions: [9, 4]
 resamp_with_conv: true
 embedding_type: fourier
-progressive: none
-progressive_input: none
+progressive: output_skip
+progressive_input: residual
 progressive_combine: sum
-progressive_output_skip: false
-fourier_scale: 16
-resblock_type: ddpm
+progressive_output_skip: true
+fourier_scale: 32
+resblock_type: biggan
 skip_rescale: true
-nonlinearity: swish
+nonlinearity: gelu
 fir: false
 fir_kernel: [1, 3, 3, 1]
-dropout: 0.2
+dropout: 0.5
 scale_by_sigma: false 
