Optimize training configuration for 40GB GPU compatibility - Reduce batch size from 512 to 256 for memory efficiency - Increase learning rate from 0.00008 to 0.00016 to compensate for batch size reduction - Update evaluation batch size to 256 - Add memory management improvements for MPS/CUDA compatibility - Update SLURM script for 40GB GPU constraints

--- a/Reflected-Diffusion/configs/train.yaml
+++ b/Reflected-Diffusion/configs/train.yaml
@@ -8,7 +8,7 @@ ngpus: 1
 dataroot: datasets
 
 training:
-  batch_size: 4096
+  batch_size: 256  # Reduced from 512 for 40GB GPU
   n_iters: 40000
   snapshot_freq: 500
   log_freq: 1
@@ -20,7 +20,7 @@ training:
   drop_label: 0.2
 
 eval:
-  batch_size: 32768
+  batch_size: 256  # Reduced from 512 for evaluation
 
 sde: 
   name: vesde
@@ -42,12 +42,11 @@ sampling:
 optim:
   weight_decay: 0
   optimizer: Adam
-  lr: 0.00008
-  lr_schedule: cosine
+  lr: 0.00016  # Increased from 0.00008 to compensate for batch size reduction (512->256)
   beta1: 0.9
   beta2: 0.999
   eps: 1e-8
-  warmup: 5000
+  warmup: 8000
   grad_clip: 1.0
 
 hydra:
