--- a/Reflected-Diffusion/configs/model/ncsnpp.yaml
+++ b/Reflected-Diffusion/configs/model/ncsnpp.yaml
@@ -20,7 +20,7 @@ progressive_output_skip: true
 fourier_scale: 32
 resblock_type: biggan
 skip_rescale: true
-nonlinearity: gelu
+nonlinearity: swish
 fir: false
 fir_kernel: [1, 3, 3, 1]
 dropout: 0.5
