Update plot_losses.py with moving average functionality and add latest training logs and loss plot

--- a/.gitignore
+++ b/.gitignore
@@ -13,4 +13,31 @@ Thumbs.db
 # *$py.class
 
 # Git internal files
-.git/ 
+.git/
+
+# Checkpoint files and large model files
+*.ckpt
+*.pth
+*.pt
+*.safetensors
+*.bin
+*.h5
+*.hdf5
+*.pkl
+*.pickle
+
+# Training runs and logs (optional - uncomment if you want to exclude these)
+# Training Runs/
+# logs/
+
+# Large data files
+*.npy
+*.npz
+*.mat
+*.csv
+*.tsv
+
+# Temporary files
+*.tmp
+*.temp
+*~ 
