--- a/Reflected-Diffusion/Training Runs/2025.07.31_161304/.hydra/config.yaml
+++ b/Reflected-Diffusion/Training Runs/2025.07.31_161304/.hydra/config.yaml
@@ -1,3 +1,9 @@
+defaults:
+  - _self_
+  - model: ncsnpp
+  - data: gto_halo
+  - override hydra/launcher: submitit_slurm
+
 ngpus: 1
 dataroot: datasets
 
@@ -36,12 +42,28 @@ sampling:
 optim:
   weight_decay: 0
   optimizer: Adam
-  lr: 0.00016  # Increased from 0.00008 to compensate for batch size reduction
+  lr: 0.00016  # Increased from 0.00008 to compensate for batch size reduction (512->256)
   beta1: 0.9
   beta2: 0.999
   eps: 1e-8
   warmup: 8000
   grad_clip: 1.0
+
+hydra:
+  run:
+    dir: ../Training Runs/${now:%Y.%m.%d_%H%M%S}
+  sweep:
+    dir: ../Training Runs/${now:%Y.%m.%d_%H%M%S}
+    subdir: ${hydra.job.num}
+  # launcher:
+  #   max_num_timeout: null
+  #   timeout_min: null
+  #   partition: null
+  #   account: null
+  #   mem_gb: null
+  #   cpus_per_task: null
+  #   gpus_per_node: ${ngpus}
+  #   constraint: null
 
 model:
   name: ncsnpp
@@ -81,4 +103,4 @@ data:
   classes: true
   ngpus: 1
 
-checkpoint_path: null 
+checkpoint_path: null
