Implement optimal 5x5x3 GTO Halo dataset structure with 80GB GPU optimization
- Add GTOHaloOptimalImageDataset with semantic 5x5x3 structure
- Optimize NCSNPP model for 5x5x3 images (channels: 3, size: 5x5)
- Scale batch size to 1792 and LR to 0.000320 for 80GB GPU
- Add comprehensive .gitignore patterns for checkpoints and training outputs
- Implement reflected diffusion with spherical thrust coordinates
- Ensure constraint satisfaction (thrust magnitude ≤ 1.0)
- Add detailed comments throughout codebase

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,20 @@
 **/temp_samples.pkl
 **/training_data_*.pkl
 
+# Model checkpoint files
+*.pth
+*.pt
+*.ckpt
+*.safetensors
+
+# Training output directories
+Training Runs/
+**/Training Runs/
+**/checkpoints/
+**/logs/
+**/samples/
+**/temp_samples/
+
 # Python cache files
 __pycache__/
 *.py[cod]
