--- a/Reflected-Diffusion/configs/model/ncsnpp.yaml
+++ b/Reflected-Diffusion/configs/model/ncsnpp.yaml
@@ -1,7 +1,7 @@
 name: ncsnpp
-channels: 1
-image_size: 9
-image_width: 9
+channels: 3
+image_size: 5
+image_width: 5
 num_classes: 1
 cond_drop_prob: 0.3
 conditional: true
@@ -10,7 +10,7 @@ ema_rate: 0.9999
 nf: 512
 ch_mult: [1, 2, 4]
 num_res_blocks: 4
-attn_resolutions: [9, 4]
+attn_resolutions: [5]
 resamp_with_conv: true
 embedding_type: fourier
 progressive: output_skip
