Update training config to restart from latest checkpoint and add training loss plot

--- a/Reflected-Diffusion/configs/train.yaml
+++ b/Reflected-Diffusion/configs/train.yaml
@@ -65,4 +65,4 @@ hydra:
   #   gpus_per_node: ${ngpus}
   #   constraint: null
 
-checkpoint_path: null
+checkpoint_path: "Reflected-Diffusion/Training Runs/2025.08.19_182929/checkpoints/checkpoint_8.pth"
