Fix training configuration and add loss plotting functionality - Add missing snapshot_freq_for_preemption parameter to train_gto_1d.yaml - Update plot_losses.py to work with current log file patterns - Add training loss visualization plot

--- a/Reflected-Diffusion/configs/train_gto_1d.yaml
+++ b/Reflected-Diffusion/configs/train_gto_1d.yaml
@@ -17,6 +17,7 @@ training:
   likelihood_weighting: false
   reduce_mean: true
   snapshot_freq: 500
+  snapshot_freq_for_preemption: 10000  # Checkpoint for preemption every 1000 steps
   log_freq: 50
   eval_freq: 500
   snapshot_sampling: true
